[gd_scene load_steps=13 format=3 uid="uid://d3fdd3hdc7p1q"]

[ext_resource type="Script" path="res://components/stats_component.gd" id="1_eskvc"]
[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_lsgy0"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_yuwln"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_8f6v6"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_bn741"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="5_f2ppf"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="7_i0wgq"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="8_3xwef"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="9_p7bdl"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_jn8gr"]
[ext_resource type="PackedScene" uid="uid://brxkr5i2qmxqp" path="res://effects/explotion_effect.tscn" id="11_rjbej"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="12_5q5l7"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_lsgy0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("1_eskvc")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_yuwln")
actor = NodePath("..")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_8f6v6")
sprite = NodePath("../AnimatedSprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_bn741")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("5_f2ppf")
node = NodePath("../AnimatedSprite2D")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("7_i0wgq")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("8_3xwef")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("9_p7bdl")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("10_jn8gr")
scene = ExtResource("11_rjbej")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("12_5q5l7")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../SpawnerComponent")
